--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ footer a{
     .header-container{
         margin: 0;
         padding: 0 20px 20px 20px;
+        height: auto;
     }
     .card-flottante h2{
         font-size: 20px;
