--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
     background-image: url(images/bg-hero-desktop.svg);
     background-repeat: no-repeat;
     background-color: var(--light-pink);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 nav {
@@ -351,9 +351,6 @@ footer a{
         padding: 30px;
         left: 10vw;
         bottom: -80px;
-    }
-    .header-section-img{
-        /* width: 150px; */
     }
     .header-container{
         margin: 0;
