--- a/style.css
+++ b/style.css
@@ -262,7 +262,8 @@ footer a{
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 30px;
+        padding: 0;
+        gap: 10px;
     }
     nav img{
         width: 30vw;
@@ -271,7 +272,7 @@ footer a{
         flex-direction: column;
         text-align: center;
         margin-top: 20px;
-        gap: 80px;
+        /* gap: 80px; */
     }
     .header-container img{
         width: 80vw;
